// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseButton executes callback 1`] = `
<button
  className="sc-bwzfXH kGsEoO sc-bdVaJa fZpuHR"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`BaseButton executes callback 2`] = `
<button
  className="sc-bwzfXH kGsEoO sc-bdVaJa fZpuHR"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 1`] = `
<button
  className="sc-htpNat bfvzQm sc-bwzfXH kGsEoO sc-bdVaJa fZpuHR"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 2`] = `
<button
  className="sc-htpNat bfvzQm sc-bwzfXH kGsEoO sc-bdVaJa fZpuHR"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the BaseButton matches the snapshot 1`] = `
<button
  className="sc-bwzfXH kGsEoO sc-bdVaJa fZpuHR"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the IconButton matches the snapshot 1`] = `
<button
  className="sc-htpNat bfvzQm sc-bwzfXH kGsEoO sc-bdVaJa fZpuHR"
  icon={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="sc-bxivhb emNmLd"
  />
</button>
`;

exports[`the IconButton with text matches the snapshot 1`] = `
<button
  className="sc-htpNat bfvzQm sc-bwzfXH kGsEoO sc-bdVaJa fZpuHR"
  icon={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="sc-ifAKCX kKdTJK sc-EHOje jJdtcA"
  />
  Click
</button>
`;

exports[`the SnippetPreviewButton matches the snapshot 1`] = `
<button
  className="sc-htpNat bfvzQm sc-bwzfXH kGsEoO sc-bdVaJa fZpuHR"
  type="button"
>
  ButtonValue
</button>
`;
